[package]
name = "rec"
version = "0.1.0"
authors = ["Timofey <ouxya@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
rand = "0.7.3"
rand_core = "0.5.1"
lazy_static = "1.4.0"
chrono = "0.4"
uuid = { version = "0.8", features = ["v4"] }
block-modes = "0.7.0"
aes = "0.6.0"
base64 = "0.13.0"
crc = "1.8.1"